# CoCo

./: .gitignore  Cargo.toml  Dockerfile  README.md  compose.yml
.cargo/: config.toml
.github/workflows/: rust.yml  static.yml
api/mobile/: build.gradle.kts  settings.gradle.kts
api/mobile/gradle/: libs.versions.toml
api/mobile/src/main/kotlin/it/cnr/istc/pst/coco/: coco.kt  model.kt
api/mobile/src/test/kotlin/it/cnr/istc/pst/coco/: CoCoTest.kt
api/python/: pyproject.toml
api/python/src/coco/: model.py
api/web/playground/: tsconfig.json
api/web/src/: coco.ts
api/web/src/components/: class.ts  object.ts  offcanvas.ts  user.ts
gui/: .gitignore  package-lock.json  package.json
gui/mobile/: .gitignore  build.gradle.kts  settings.gradle.kts
gui/mobile/src/main/kotlin/it/cnr/istc/pst/coco/: coco.kt  model.kt
gui/mobile/src/test/kotlin/it/cnr/istc/pst/coco/: CoCoTest.kt
gui/playground/: index.html  main.ts  vite.config.ts
gui/python/: coco.py
gui/python/src/coco/: coco.py
gui/src/: coco.ts  index.ts
gui/src/components/: app.ts  class.ts  object.ts  rule.ts  taxonomy.ts  user.ts
gui/web/playground/: vite.config.ts
gui/web/src/: index.ts
gui/web/src/components/: rule.ts
mobile/: .gitignore  build.gradle  settings.gradle
mobile/app/: build.gradle
mobile/app/src/main/: AndroidManifest.xml
mobile/app/src/main/java/it/cnr/istc/coco/: CoCo.kt  CoCoActivity.kt  CoCoViewModel.kt  MainActivity.kt  MessagingService.kt
public/: auth_api.json  index.html  openapi.json  public_api.json
src/: fcm.rs  lib.rs  main.rs  model.rs  mqtt.rs  ros.rs
src/db/: mod.rs  mongodb.rs
src/kb/: mod.rs
src/kb/clips/: chronoxide.rs  clips.rs  clips_kb.rs  mod.rs  ollama.rs
src/server/: auth.rs  auth_db.rs  mod.rs  public.rs  secure.rs  secure_db.rs  unsecure.rs
tests/: integration_test.rs
