[package]
name = "coco-reasoner"
version = "0.1.0"
authors = ["Riccardo De Benedictis"]
edition = "2024"
description = "Combined deduCtiOn and abduCtiOn (CoCo) reasoner is a dual-process inspired cognitive architecture built in Rust"
readme = "README.md"
repository = "https://github.com/pstlab/CoCo"
license-file = "LICENSE"

[lib]
name = "coco"

[[bin]]
name = "coco-reasoner"
required-features = ["server"]

[features]
default = ["mongodb", "clips", "secure"]
mongodb = ["dep:mongodb"]
clips = ["dep:clips"]
ollama = ["clips", "dep:reqwest", "dep:futures-util"]
server = ["dep:axum", "dep:tower-http", "dep:utoipa"]
secure = ["server", "dep:jsonwebtoken", "dep:argon2"]
fcm = ["clips", "mongodb", "server", "dep:reqwest", "dep:yup-oauth2"]
mqtt = ["dep:rumqttc"]
chronoxide = ["dep:chronoxide"]

[dependencies]
axum = { version = "0.8.9", features = ["ws"], optional = true }
tower-http = { version = "0.6.8", features = ["fs"], optional = true }
tokio = { version = "1.52.1", features = ["full"] }
jsonwebtoken = { version = "10.3.0", optional = true, features = [
    "rust_crypto",
] }
argon2 = { version = "0.5.3", features = ["std"], optional = true }
serde = "1.0.228"
mongodb = { version = "3.6.0", optional = true }
futures = "0.3.32"
async-trait = "0.1.89"
chrono = { version = "0.4.44", features = ["serde"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
utoipa = { version = "5.4.0", features = ["chrono"], optional = true }
serde_json = "1.0.149"
reqwest = { version = "0.13.3", features = ["json", "stream"], optional = true }
futures-util = { version = "0.3.32", optional = true }
yup-oauth2 = { version = "12.1.2", optional = true }
rumqttc = { version = "0.25.1", optional = true }
clips = { git = "https://github.com/ratioSolver/rust-clips", optional = true }
chronoxide = { git = "https://github.com/ratioSolver/Chronoxide", optional = true }
